syntax = "proto3";
package furynetwork.fury.dvm;

import "gogoproto/gogo.proto";
import "fury/dvm/params.proto";
import "fury/dvm/key_vault.proto";
import "fury/dvm/proposal.proto";
import "fury/dvm/stats.proto";

option go_package = "github.com/furynet/xfury/x/dvm/types";

// GenesisState defines the dvm module's genesis state.
message GenesisState {
  // params contains parameters of dvm module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  // key_vault trusted keys from genesis file.
  KeyVault key_vault = 2 [ (gogoproto.nullable) = false ];
  // pubkeys_change_proposals is the finished proposal list for the
  // public keys change.
  repeated PublicKeysChangeProposal pubkeys_change_proposals = 3
      [ (gogoproto.nullable) = false ];
  // proposal_stats holds the proposal statistics.
  ProposalStats proposal_stats = 4 [ (gogoproto.nullable) = false ];
}
