syntax = "proto3";
package furynetwork.fury.dvm;

import "gogoproto/gogo.proto";

option go_package = "github.com/furynet/xfury/x/dvm/types";

// KeyVault is the information of important keys stored in dvm state.
message KeyVault {
  // public_keys contains allowed public keys.
  repeated string public_keys = 1 [ (gogoproto.nullable) = false ];
}
